2008-05-24  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui: Merged the "Compile" operation into the "Run"
	operation.
	* src/instructions.h:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h:
	* src/parser.c:
	* src/parser.h:
	* src/simulation.c: Various code cleanups, including a rearrangement
	of some of the parser code to make it more logical. Lots of polish
	applied to the error reporting, and added tagging of the relevant code
	in the editor when an error is encountered.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/instructions.h:
	* src/interface.c:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/simulation.c: Rearranged the parser a little and added support
	for highlighting the current instruction as the program executes.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/simulation.c: Added more information to the sidebar, and allowed
	the clock speed to be changed when the simulation isn't running.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* src/main-window.c: Slightly improved error handling when parsing,
	compiling or running a program.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* data/mcus.ui:
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.h: Added support for reading the ADC, and improved the
	interface a little.
	* src/simulation.c: Added simulation of some of the subroutines.

2008-05-23  Philip Withnall  <philip@tecnocode.co.uk>

	* configure.ac:
	* data/mcus.ui:
	* src/Makefile.am: Changed the text editor to GtkSourceView.
	* src/instructions.h: Added an "END" instruction for simplicity's
	sake in determining when a simulation's ended.
	* src/interface.c:
	* src/interface.h:
	* src/main-window.c:
	* src/main.c:
	* src/main.h:
	* src/parser.c:
	* src/simulation.c: